# dupecheck

./: .gitignore  CMakeLists.txt  README.md  plan.md
resources/: dupecheck.rc
src/: cli.cpp  main.cpp
src/core/: ActionModel.h  FileInfo.h  Strategy.h
src/database/: DatabaseManager.cpp  DatabaseManager.h
src/engine/: DuplicateEngine.cpp  DuplicateEngine.h  DuplicateGroup.h  ExactMatch.cpp  ExactMatch.h  ExtensionFamily.cpp  ExtensionFamily.h  FolderCopy.cpp  FolderCopy.h  NameVariant.cpp  NameVariant.h  SizeHashSimilar.cpp  SizeHashSimilar.h
src/gui/: Controls.cpp  Controls.h  ImGuiView.cpp  ImGuiView.h  PreviewPanel.cpp  PreviewPanel.h  SettingsDialog.cpp  SettingsDialog.h
src/hashing/: HashEngine.cpp  HashEngine.h  ThreadPool.cpp  xxhash_wrapper.h
src/hashing/xxhash/: xxhash.c  xxhash.cpp  xxhash.h  xxhash_wrapper.h
src/organization/: ArchiveAction.h  DeleteAction.h  MergeAction.h  MoveAction.h  OrganizationSvc.cpp  OrganizationSvc.h  RenameAction.h  SymlinkAction.h  UndoManager.h
src/scanner/: CachedDatabase.cpp  CachedDatabase.h  CachedScannerService.cpp  CachedScannerService.h  FileScanner.cpp  FileScanner.h
src/service/: NamedPipeServer.cpp  NamedPipeServer.h  ServiceHost.cpp  ServiceHost.h
src/utils/: DbPath.cpp  DbPath.h  ExtensionFamilyMap.h  JsonConfig.cpp  JsonConfig.h  Levenshtein.h
tests/: test_duplicate_engine.cpp  test_hash_engine.cpp  test_levenshtein.cpp
